Overflow fixes

--- a/content/themes/rollekino/sass/layout/_search-modal.scss
+++ b/content/themes/rollekino/sass/layout/_search-modal.scss
@@ -14,7 +14,7 @@
   }
 
   .container {
-    overflow-x: hidden;
+    padding-bottom: 10rem;
     position: relative;
     width: 100%;
     z-index: 10;
